mCRL2/mucalculusParser.java
// Generated from mucalculus.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class mucalculusParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__66=1, T__65=2, T__64=3, T__63=4, T__62=5, T__61=6, T__60=7, T__59=8, 
		T__58=9, T__57=10, T__56=11, T__55=12, T__54=13, T__53=14, T__52=15, T__51=16, 
		T__50=17, T__49=18, T__48=19, T__47=20, T__46=21, T__45=22, T__44=23, 
		T__43=24, T__42=25, T__41=26, T__40=27, T__39=28, T__38=29, T__37=30, 
		T__36=31, T__35=32, T__34=33, T__33=34, T__32=35, T__31=36, T__30=37, 
		T__29=38, T__28=39, T__27=40, T__26=41, T__25=42, T__24=43, T__23=44, 
		T__22=45, T__21=46, T__20=47, T__19=48, T__18=49, T__17=50, T__16=51, 
		T__15=52, T__14=53, T__13=54, T__12=55, T__11=56, T__10=57, T__9=58, T__8=59, 
		T__7=60, T__6=61, T__5=62, T__4=63, T__3=64, T__2=65, T__1=66, T__0=67, 
		ID=68, INT=69, WS=70, LINE_COMMENT=71;
	public static final String[] tokenNames = {
		"<INVALID>", "'eqn'", "'*'", "'['", "'<'", "'List'", "'false'", "'!='", 
		"'<='", "'Bool'", "'nil'", "'cons'", "'}'", "'->'", "')'", "'Nat'", "'whr'", 
		"'Bag'", "'@'", "'Pos'", "'map'", "'='", "'div'", "'FSet'", "'Int'", "'yaled'", 
		"'val'", "'mod'", "'|'", "'!'", "']'", "'lambda'", "'in'", "','", "'-'", 
		"'('", "':'", "'var'", "'?'", "'{'", "'sort'", "'|>'", "'true'", "'++'", 
		"'struct'", "'<|'", "'Set'", "'tau'", "'.'", "'=>'", "'+'", "'glob'", 
		"'forall'", "';'", "'&&'", "'delay'", "'nu'", "'||'", "'exists'", "'>'", 
		"'Real'", "'FBag'", "'=='", "'/'", "'>='", "'#'", "'end'", "'mu'", "ID", 
		"INT", "WS", "LINE_COMMENT"
	};
	public static final int
		RULE_start = 0, RULE_fixedPointOperator = 1, RULE_besVar = 2, RULE_dataValExpr = 3, 
		RULE_actFrm = 4, RULE_regFrm = 5, RULE_stateFrm = 6, RULE_stateVarDecl = 7, 
		RULE_stateVarAssignment = 8, RULE_stateVarAssignmentList = 9, RULE_varsDeclList = 10, 
		RULE_dataExprList = 11, RULE_dataExpr = 12, RULE_multAct = 13, RULE_varsDecl = 14, 
		RULE_bagEnumEltList = 15, RULE_bagEnumElt = 16, RULE_assignmentList = 17, 
		RULE_varDecl = 18, RULE_idList = 19, RULE_actionList = 20, RULE_sortExpr = 21, 
		RULE_assignment = 22, RULE_action = 23, RULE_simpleSortExpr = 24, RULE_hashArgs = 25, 
		RULE_constrDeclList = 26, RULE_constrDecl = 27, RULE_projDecl = 28, RULE_projDeclList = 29, 
		RULE_dataSpec = 30, RULE_globVarSpec = 31, RULE_varSpec = 32, RULE_eqnSpec = 33, 
		RULE_eqnDecl = 34, RULE_sortSpec = 35, RULE_consSpec = 36, RULE_mapSpec = 37, 
		RULE_sortDecl = 38, RULE_idsDecl = 39;
	public static final String[] ruleNames = {
		"start", "fixedPointOperator", "besVar", "dataValExpr", "actFrm", "regFrm", 
		"stateFrm", "stateVarDecl", "stateVarAssignment", "stateVarAssignmentList", 
		"varsDeclList", "dataExprList", "dataExpr", "multAct", "varsDecl", "bagEnumEltList", 
		"bagEnumElt", "assignmentList", "varDecl", "idList", "actionList", "sortExpr", 
		"assignment", "action", "simpleSortExpr", "hashArgs", "constrDeclList", 
		"constrDecl", "projDecl", "projDeclList", "dataSpec", "globVarSpec", "varSpec", 
		"eqnSpec", "eqnDecl", "sortSpec", "consSpec", "mapSpec", "sortDecl", "idsDecl"
	};

	@Override
	public String getGrammarFileName() { return "mucalculus.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public mucalculusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public StateFrmContext stateFrm() {
			return getRuleContext(StateFrmContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); stateFrm(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FixedPointOperatorContext extends ParserRuleContext {
		public FixedPointOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fixedPointOperator; }
	 
		public FixedPointOperatorContext() { }
		public void copyFrom(FixedPointOperatorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MuOperatorContext extends FixedPointOperatorContext {
		public MuOperatorContext(FixedPointOperatorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterMuOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitMuOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitMuOperator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NuOperatorContext extends FixedPointOperatorContext {
		public NuOperatorContext(FixedPointOperatorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterNuOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitNuOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitNuOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FixedPointOperatorContext fixedPointOperator() throws RecognitionException {
		FixedPointOperatorContext _localctx = new FixedPointOperatorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_fixedPointOperator);
		try {
			setState(84);
			switch (_input.LA(1)) {
			case 67:
				_localctx = new MuOperatorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(82); match(67);
				}
				break;
			case 56:
				_localctx = new NuOperatorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(83); match(56);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BesVarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(mucalculusParser.ID, 0); }
		public BesVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_besVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterBesVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitBesVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitBesVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BesVarContext besVar() throws RecognitionException {
		BesVarContext _localctx = new BesVarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_besVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataValExprContext extends ParserRuleContext {
		public DataExprContext myDataExpr;
		public DataExprContext dataExpr() {
			return getRuleContext(DataExprContext.class,0);
		}
		public DataValExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataValExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterDataValExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitDataValExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitDataValExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataValExprContext dataValExpr() throws RecognitionException {
		DataValExprContext _localctx = new DataValExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dataValExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); match(26);
			setState(89); match(35);
			setState(90); ((DataValExprContext)_localctx).myDataExpr = dataExpr(0);
			setState(91); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActFrmContext extends ParserRuleContext {
		public int _p;
		public ActFrmContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ActFrmContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_actFrm; }
	 
		public ActFrmContext() { }
		public void copyFrom(ActFrmContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class AtOperatorActionFrmContext extends ActFrmContext {
		public DataExprContext dataExpr() {
			return getRuleContext(DataExprContext.class,0);
		}
		public ActFrmContext actFrm() {
			return getRuleContext(ActFrmContext.class,0);
		}
		public AtOperatorActionFrmContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterAtOperatorActionFrm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitAtOperatorActionFrm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitAtOperatorActionFrm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImplicationContext extends ActFrmContext {
		public ActFrmContext actFrm(int i) {
			return getRuleContext(ActFrmContext.class,i);
		}
		public List<ActFrmContext> actFrm() {
			return getRuleContexts(ActFrmContext.class);
		}
		public ImplicationContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterImplication(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitImplication(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitImplication(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExistentialQuantifierActionFrmContext extends ActFrmContext {
		public VarsDeclListContext varsDeclList() {
			return getRuleContext(VarsDeclListContext.class,0);
		}
		public ActFrmContext actFrm() {
			return getRuleContext(ActFrmContext.class,0);
		}
		public ExistentialQuantifierActionFrmContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterExistentialQuantifierActionFrm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitExistentialQuantifierActionFrm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitExistentialQuantifierActionFrm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FalseActionFrmContext extends ActFrmContext {
		public FalseActionFrmContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterFalseActionFrm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitFalseActionFrm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitFalseActionFrm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnionOfActionsContext extends ActFrmContext {
		public ActFrmContext actFrm(int i) {
			return getRuleContext(ActFrmContext.class,i);
		}
		public List<ActFrmContext> actFrm() {
			return getRuleContexts(ActFrmContext.class);
		}
		public UnionOfActionsContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterUnionOfActions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitUnionOfActions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitUnionOfActions(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DataValueExpressionActionFrmContext extends ActFrmContext {
		public DataValExprContext dataValExpr() {
			return getRuleContext(DataValExprContext.class,0);
		}
		public DataValueExpressionActionFrmContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterDataValueExpressionActionFrm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitDataValueExpressionActionFrm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitDataValueExpressionActionFrm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntersectionOfActionsContext extends ActFrmContext {
		public ActFrmContext actFrm(int i) {
			return getRuleContext(ActFrmContext.class,i);
		}
		public List<ActFrmContext> actFrm() {
			return getRuleContexts(ActFrmContext.class);
		}
		public IntersectionOfActionsContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterIntersectionOfActions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitIntersectionOfActions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitIntersectionOfActions(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BracketsActionFrmContext extends ActFrmContext {
		public ActFrmContext actFrm() {
			return getRuleContext(ActFrmContext.class,0);
		}
		public BracketsActionFrmContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterBracketsActionFrm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitBracketsActionFrm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitBracketsActionFrm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultiActionContext extends ActFrmContext {
		public MultActContext multAct() {
			return getRuleContext(MultActContext.class,0);
		}
		public MultiActionContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterMultiAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitMultiAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitMultiAction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UniversalQuantifierActionFrmContext extends ActFrmContext {
		public VarsDeclListContext varsDeclList() {
			return getRuleContext(VarsDeclListContext.class,0);
		}
		public ActFrmContext actFrm() {
			return getRuleContext(ActFrmContext.class,0);
		}
		public UniversalQuantifierActionFrmContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterUniversalQuantifierActionFrm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitUniversalQuantifierActionFrm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitUniversalQuantifierActionFrm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TrueActionFrmContext extends ActFrmContext {
		public TrueActionFrmContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterTrueActionFrm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitTrueActionFrm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitTrueActionFrm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NegationActionFrmContext extends ActFrmContext {
		public ActFrmContext actFrm() {
			return getRuleContext(ActFrmContext.class,0);
		}
		public NegationActionFrmContext(ActFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
